--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -1,3 +1,4 @@
+$PrimaryFontColor: #2c3e50;
 *{
     margin: 0px;
     padding: 0px;
@@ -5,7 +6,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    color: #2c3e50;
+    color: $PrimaryFontColor;
 }
 body{
     width: 100vw;
@@ -35,7 +36,30 @@ body{
     }
     .tickets-wrap{
         grid-area: tickets;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
         background-color: #fd6b6d;
+
+        .ticketLabel{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #fff;
+            width: 50%;
+            height: 5%;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        }
+
+        .ticket{
+            width: 90%;
+            margin: 5px 0;
+            background-color: #fff;
+        }
     }
     .map-wrap{
         grid-area: map;
