--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -27,7 +27,7 @@ body{
 
     .nav-wrap{
         grid-area: nav;
-        background-color: #57B8FF;
+       // background-color: #57B8FF;
         display: flex;
         justify-content: center;
         align-items: center;
