--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -149,13 +149,11 @@ body{
     .map-wrap{
         grid-area: map;
 
-        #map {
+        #mapboxgl-map{
             width: 100%;
             height: 100%;
-            margin: 0 auto;
-            background: gray;
-            overflow: hidden;
-          }
+        }
+        
     }
     
 }
