Implemented radius search test

--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -93,6 +93,7 @@ body{
             }
             #return-datepicker{
                 grid-area: returnDate;
+                display: none;
             }
             #submit-input{
                 grid-area: submit;
