--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -122,8 +122,7 @@ body{
                     height: 75px;
                     box-sizing: border-box;
                     user-select: none;
-                    outline: none;
-                    
+                    outline: none;   
                 }
             }
             #radius-from-disp{
@@ -353,12 +352,12 @@ body{
                 cursor: pointer;
                 box-shadow: 5px 0 10px rgba(0,0,0,0.25), 3px 0 3px rgba(0,0,0,0.22);
             }
-            &:nth-child(odd) .ticket-color{
-                background-color: #57B8FF;
-            }
-            &:nth-child(even) .ticket-color{
-                background-color: #50e3c2;
-            }
+            //&:nth-child(n) .ticket-color{
+                //background-color: #57B8FF;
+           // }
+           // &:nth-child(even) .ticket-color{
+               // background-color: #50e3c2;
+            //}
         }
     }
     .map-wrap{
