--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -150,16 +150,31 @@ body{
         background-color: #fd6b6d;
         overflow: scroll;
 
-        .radio-buttons {
-            display: inline;
-            position: relative;
-            cursor: pointer;
-            padding: 15px;
-            font-size: 22px;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
+        .sort-options{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 15px;
+
+            .sort-option{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                user-select: none;
+                cursor: pointer;
+                height: 30px;
+                padding-left: 20px;
+                padding-right: 20px;
+                border-radius: 15px;
+                background-color: #fff;
+                margin: 0px 5px;
+                box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+                transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+                &:hover{
+                    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+                }
+            }
         }
         .modal {
             display: none;
@@ -262,7 +277,7 @@ body{
             align-items: center;
             background-color: #fff;
             width: 50%;
-            height: 5%;
+            height: 30px;
             font-weight: 600;
             margin: 0 auto;
             margin-top: 10px;
@@ -345,7 +360,7 @@ body{
                 justify-content: center;
                 align-items: center;
                 p{
-                    margin: 5px 5px;
+                    margin: 10px 5px;
                 }
             }
             &:hover{
