--- a/Core/client/src/assets/styles.scss
+++ b/Core/client/src/assets/styles.scss
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700,800,900');
 $PrimaryFontColor: #2c3e50;
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    font-family: 'Nunito', Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: $PrimaryFontColor;
@@ -161,6 +162,17 @@ body{
         grid-area: tickets;
         background-color: #fd6b6d;
         overflow-y: scroll;
+        overflow-x: hidden;
+
+
+        &::-webkit-scrollbar {
+            width: 10px;  /* remove scrollbar space */
+            background: transparent;  /* optional: just make scrollbar invisible */
+        }
+        &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, .2);
+            border-radius: 20px;
+        }
 
         .sort-options{
             display: flex;
@@ -231,6 +243,7 @@ body{
             font-weight: 800;
             box-shadow: 1px 0 3px rgba(0,0,0,0.12), 1px 0 2px rgba(0,0,0,0.24);
             transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+            user-select: none;
 
 
 
